[project]
name = "auto-kg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=0.3.60",
    "langgraph>=0.4.5",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "types-networkx>=3.4.2.20250515",
    "typing>=3.10.0.0",
]
